--- a/gdsc_website/gdsc_app/templates/base.html
+++ b/gdsc_website/gdsc_app/templates/base.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <main class="header" style="background: url('{% static 'assets/header/background.png' %}')" >
+    <main class="header" style="background: url('{% static 'assets/header/background.png' %}') 100% 0 no-repeat " >
         <nav class="header__navbar">
             <img class="header__navbar-logo" src="{% static 'assets/header/gdsc-logo.gif' %}" />
             <div class="header__navbar-links">
@@ -67,7 +67,7 @@
                     <img class="footer__link_img" src="{% static 'assets/footer/instagram.png' %}" alt="" />
                 </a>
                 <a href="https://www.linkedin.com/company/google-developer-student-club-iet-lucknow/?originalSubdomain=in" class="footer__made_links">
-                    <img class="footer__link_img" src="{% static 'assets/footer/linkdin.png' %}" alt="" />
+                    <img class="footer__link_img" src="{% static 'assets/footer/linkedin.png' %}" alt="" />
                 </a>
                 <a href="https://github.com/GDSC-IET-LUCKNOW" class="footer__made_links">
                     <img class="footer__link_img" src="{% static 'assets/footer/github_logo.png' %}" alt="" />
