--- a/gdsc_website/gdsc_app/static/gdsc_app/styles/our_activities.css
+++ b/gdsc_website/gdsc_app/static/gdsc_app/styles/our_activities.css
@@ -45,17 +45,10 @@
     border-radius: 6rem;
   }
   .our_activities_box1 {
-    align-self: flex-end;
+    align-self: center;
     box-shadow: inset 0px 4px 24px rgba(219, 68, 55, 0.25);
   }
-  .our_activities_box2 {
-    align-self: flex-start;
-    box-shadow: inset 0px 4px 24px rgba(84, 168, 127, 0.33);
-  }
-  .our_activities_box3 {
-    align-self: flex-end;
-    box-shadow: inset 0px 4px 24px rgba(66, 133, 244, 0.34);
-  }
+  
   
   .our_activities_logo {
     position: absolute;
